# enigma2-plugins

./: .gitignore  Makefile.am  Rules-po.mak  configure.ac
F3LEDControl/: Makefile.am
F3LEDControl/CONTROL/: control
F3LEDControl/src/: plugin.py
webadmin/CONTROL/: control
webadmin/src/WebScreens/: WebAdminScreen.pyo  __init__.pyo
webadmin/src/web-data/: index.html
webbouqueteditor/CONTROL/: control
webbouqueteditor/src/WebComponents/Sources/: BouquetEditor.py  ServiceList.py
webbouqueteditor/src/web-data/: index.html  style.css
webinterface/: Makefile.am
webinterface/CONTROL/: control  postinst
webinterface/src/: WebScreens.py  plugin.py  webif.py
webinterface/src/WebComponents/Sources/: Network.py  Strings.py
webinterface/src/web-data/: Makefile.am  core.js  handler.js  provider.js  statics.js
webinterface/src/web-data/background/: Makefile.am
webinterface/src/web-data/fonts/: Makefile.am
webinterface/src/web-data/tpl/default/: Makefile.am  index.html  style.min.css  style_dark.min.css  style_light.min.css  style_modern.min.css  tplBackgroundChange.htm  tplFactoryReset.htm  tplKeymapChange.htm  tplMediaPlayer.htm  tplMultibootControl.htm  tplNavExtras.htm  tplNavOpennfr.htm  tplSettings.htm  tplSkinChange.htm  tplSoftcamControl.htm
webinterface/src/web-data/tpl/default/streaminterface/: index.html
